@@ -11,6 +11,8 @@ by sun: Ported to Drupal 7.
 
 Compact Forms 6.x-1.x, xxxx-xx-xx
 ---------------------------------
+#461918 by neochief, mstrelan, sun: Fixed Chrome/Safari/Firefox browser quirks
+  with user login form.
 #765840 by chriscalip, sun: Fixed uncaught exception/syntax error.
 #523230 by LaurentB, sun: Added support for textareas.
 #251421 by sun: Fixed multiple forms with same ID are not compacted.
